[package]
name = "network"
version = "6.4.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
# !!
tokio-rustls = { version = "0.22", features = ["dangerous_configuration"] }
rcgen = "0.9"
x509-parser = "0.12"
futures = "0.3"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
clap = "3.1"
tonic = "0.5"
prost = "0.8"
bytes = "1"
thiserror =  "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tentacle-multiaddr = "0.3"
parking_lot = "0.12"
md5 = "0.7"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }

[build-dependencies]
tonic-build = "0.5"
