[package]
name = "network"
version = "6.4.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
# !!
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.0"
rcgen = "0.9"
x509-parser = "0.13"
futures = "0.3"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
clap = "3.1"
tonic = "0.5"
prost = "0.8"
bytes = "1"
thiserror =  "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tentacle-multiaddr = "0.3"
parking_lot = "0.12"
md5 = "0.7"

cloud-util = { git = "https://github.com/cita-cloud/cloud-util.git" }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto.git" }
status_code = { package = "cloud-code", git = "https://github.com/cita-cloud/status_code.git" }

[build-dependencies]
tonic-build = "0.5"
